Update composer info command for Travis
No longer need the `-i` parameter as that's the default.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 install:
   - travis_retry composer install --no-interaction
-  - composer info -i
+  - composer info
 
 script:
   - vendor/bin/phpcs
